force-app/main/default/objects/Vessel_Lineage__c/Vessel_Lineage__c.object-meta.xml
<CustomObject>
    <label>Vessel Lineage</label>
    <nameField>
        <displayFormat>VLS-{MM}-{YY}-{000000}</displayFormat>
        <label>Vessel Lineage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vessel Lineages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>