force-app/main/default/objects/Vessel_Lineage__c/fields/Density__c.field-meta.xml
<CustomField>
    <fullName>Density__c</fullName>
    <formula>Vessel_ID__r.Density__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Density</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>