force-app/main/default/objects/Vessel_Lineage__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <formula>TEXT(Vessel_ID__r.Phase__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase</label>
    <type>Text</type>
</CustomField>