force-app/main/default/objects/Vessel_Lineage__c/fields/Production_Batch_Job__c.field-meta.xml
<CustomField>
    <fullName>Production_Batch_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Batch Job</label>
    <referenceTo>Production_Batch_Jobs__c</referenceTo>
    <relationshipName>Vessel_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>