force-app/main/default/objects/Vessel_Lineage__c/fields/Production_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Production_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Work Order</label>
    <referenceTo>Production_Work_Order__c</referenceTo>
    <relationshipName>Vessel_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>