force-app/main/default/objects/Vessel_Lineage__c/fields/RTS__c.field-meta.xml
<CustomField>
    <fullName>RTS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Return To Stock (Unused)</inlineHelpText>
    <label>RTS</label>
    <type>Checkbox</type>
</CustomField>