force-app/main/default/objects/Vessel_Lineage__c/fields/Vessel_ID__c.field-meta.xml
<CustomField>
    <fullName>Vessel_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel ID</label>
    <referenceTo>Vessel_ID__c</referenceTo>
    <relationshipName>Vessel_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>