force-app/main/default/objects/Vessel_Lineage__c/recordTypes/Input_Vessel.recordType-meta.xml
<RecordType>
    <fullName>Input_Vessel</fullName>
    <active>true</active>
    <label>Input Vessel</label>
</RecordType>