force-app/main/default/objects/Vessel_Lineage__c/recordTypes/Output_Vessel.recordType-meta.xml
<RecordType>
    <fullName>Output_Vessel</fullName>
    <active>true</active>
    <label>Output Vessel</label>
</RecordType>